# brydz_model

./: .gitignore  Cargo.toml  README.md
python/contract/: simple.py
src/: lib.rs  main.rs
src/data_formats/: card_distribution.rs  contract_params.rs  distribution_template.rs  mod.rs  sim_contract_params.rs
src/error/: mod.rs  simulation.rs
src/model/: contract.rs  detached.rs  mod.rs
src/options/: log_level_filter.rs  mod.rs
src/options/operation/: mod.rs  test_ops.rs
src/options/operation/demo_op/: biased_params.rs  biased_sample.rs  generic.rs  local.rs  mod.rs  run_nn.rs  tcp.rs
src/options/operation/gen_contract/: deal.rs  force_declarer.rs  mod.rs
src/options/operation/generate/: mod.rs
src/options/operation/generate/bias/: mod.rs
src/options/operation/generate/contract/: mod.rs
src/options/operation/simulate/: mod.rs  options.rs
src/options/operation/simulate_local/: mod.rs  options.rs
src/options/operation/test_op/: biased_sample.rs  generic.rs  local.rs  mod.rs  run_nn.rs  tcp.rs
src/options/operation/train/: mod.rs  options.rs  sequential.rs  train_session.rs  train_session_state_hist.rs
src/options/operation/train/sessions/: ac_generic.rs  contract_session.rs  dynamic.rs  generic.rs  main_session.rs  main_session_boxed.rs  mod.rs  options.rs  q_generic.rs  simple.rs  traits.rs
src/policy/nn/: explore_exploit_policy.rs  mod.rs  net_model.rs  qnet_state_hist.rs  qnet_synthetic.rs
