[package]
name = "brydz_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
karty = {path = "../karty"}
brydz_core = {path = "../brydz_core", features = ["sztorm", "speedy", "serde"]}
sztorm = {path = "../sztorm", features= ["speedy"]}
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.23"
sztorm_net_ext = {path = "../sztorm_net_ext"}
config = "0.13.3"
serde = {version = "1.0.158", featueres = ["derive"]}
toml = "0.7.3"