[package]
name = "brydz_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
karty = {path = "../karty", features = ["fuzzy"]}
brydz_core = {path = "../brydz_core", features = ["amfi", "speedy", "serde_dedicate", "serde_ron", "torch"]}
amfi_core = {path = "../amfi_core", features= ["speedy"]}
log = "0.4.20"
fern = "0.6.2"
chrono = "0.4.31"
amfi_net_ext = {path = "../amfi_net_ext" }
config = "0.13.4"
serde = {version = "1.0.195", featueres = ["derive"]}
toml = "0.8.8"
clap = {version = "4.4.14", features = ["derive"]}
thiserror = "1.0.56"
rand = "0.8.5"
ron = "0.8.1"
#tensorflow = "0.20.0"
tch = "0.14.0"
smallvec = "1.11.2"
rand_distr = "0.4.3"
amfi_rl = {path = "../amfi_rl" }
